Home: Add country switcher.

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/index.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/index.html
@@ -11,9 +11,12 @@
 {% block content %}
 
   <div class="page__row">
-    <div class="page__section efa__content">
+    <div class="page__section -narrow efa__content">
       {% include includes.index_blurb %}
     </div>
+    <aside class="page__sidebar efa__content">
+      {% include "correctiv_eurosfueraerzte/_country_switcher.html" %}
+    </aside>
   </div>
 
   <div class="row">
