--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_country_switcher.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_country_switcher.html
@@ -1,22 +1,18 @@
 {% load i18n %}
 
 <div class="well">
-  <h3>{% trans "Other countries" %}</h3>
-  <ul>
-    <li>
-      <a href="{% url 'eurosfueraerzte:eurosfueraerzte-country_index' country='de' %}">
-        {% trans "Germany" %}
-      </a>
-    </li>
-    <li>
-      <a href="{% url 'eurosfueraerzte:eurosfueraerzte-country_index' country='at' %}">
-        {% trans "Austria" %}
-      </a>
-    </li>
-    <li>
-      <a href="{% url 'eurosfueraerzte:eurosfueraerzte-country_index' country='ch' %}">
-        {% trans "Switzerland" %}
-      </a>
-    </li>
+  <p>
+    {% trans "This project is also available in these countries:" %}
   </p>
+  <ul>
+    {% for country_code, country_name in countries %}
+      {% if country_code != country %}
+        <li>
+          <a href="{% url 'eurosfueraerzte:eurosfueraerzte-country_index' country=country_code|lower %}">
+            {{ country_name }}
+          </a>
+        </li>
+      {% endif %}
+    {% endfor %}
+  </ul>
 </div>
