Remove redundant Bootstrap class names.

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_recipient_search.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_recipient_search.html
@@ -23,7 +23,7 @@
       <div class="input-group">
         {{ recipient_form.q }}
         <span class="input-group-btn">
-          <button class="btn btn-default" type="submit">{% trans "Search" %}</button>
+          <button type="submit">{% trans "Search" %}</button>
         </span>
       </div>
 
