--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base_recipients.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base_recipients.html
@@ -37,7 +37,7 @@
         <div class="input-group">
           {{ recipient_form.q }}
           <span class="input-group-btn">
-            <button class="btn btn-default" type="submit">{% trans "Search" %}</button>
+            <button type="submit">{% trans "Search" %}</button>
           </span>
         </div>
         <div class="efa__search__options">
