--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/plugins/search_tile.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/plugins/search_tile.html
@@ -18,7 +18,7 @@
     <div class="input-group">
       <input id="eurosfueraerzte-q" name="q" type="text" class="form-control" placeholder="{% trans "Postcode, e.g. 45147" %}">
       <span class="input-group-btn">
-        <button class="btn btn-primary" type="submit">{% trans "Search" %}</button>
+        <button type="submit">{% trans "Search" %}</button>
       </span>
     </div>
 
