--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base_detail.html
@@ -19,6 +19,9 @@
           <a class="efa__home-link" href="{% url 'eurosfueraerzte:eurosfueraerzte-country_index' country=country|lower %}">
             {{ project_title }}
           </a>
+          <a class="efa__home-link efa__home-link--subsection" href="{% url 'eurosfueraerzte:eurosfueraerzte-country_index' country=country|lower %}">
+            {{ country_label }}
+          </a>
 
           <h1 class="efa__header__title">
             {% block header_title %}{{ title }}{% endblock %}
