--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_home_links.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_home_links.html
@@ -3,7 +3,7 @@
 <a class="efa__home-link" href="{% url 'eurosfueraerzte:eurosfueraerzte-index' %}">
   {{ project_title }}
 </a>
-{% if not recipient_form or recipient_form.country.value %}
+{% if not recipient_form or recipient_form.country.value and country_label %}
   <a class="efa__home-link efa__home-link--subsection" href="{% url 'eurosfueraerzte:eurosfueraerzte-country_index' country=country|lower %}">
     {{ country_label }}
   </a>
