--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base_recipients.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base_recipients.html
@@ -14,7 +14,7 @@
         <div class="efa__search__lead">
           {% trans "How much money has your doctor received from the pharma industry last year?" %}
 
-          {% if recipient_form.is_valid %}
+          {% if recipient_form.is_valid and recipient_form.company_obj and recipient_form.label.value %}
           <ul>
           {% if recipient_form.company_obj %}
             <li>
