Make main article link translatable

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_index_blurb.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_index_blurb.html
@@ -1,5 +1,5 @@
 {% load i18n %}
 <p>
   {% trans "In 2016 the 54 biggest pharma companies in Germany published their payments to doctors and other health care professionals and organisations from the last year." %}
-  <a href="/recherchen/euros-fuer-aerzte/artikel/2016/07/14/seid-umschlungen-millionen/">{% trans "Read the background article" %}</a>
+  <a href="{% trans "/en/investigations/euros-doctors/articles/2016/12/15/embracing-millionsbe-embraced/" %}">{% trans "Read the background article" %}</a>
 </p>
