--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_about_blurb.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_about_blurb.html
@@ -3,6 +3,6 @@
 <p>
   {% trans "In 2016 the 54 biggest pharma companies in Germany published their payments to doctors and other health care professionals and organisations from the last year." %}
 </p>
-<a class="efa__header__more-link" href="/recherchen/euros-fuer-aerzte/artikel/2016/07/14/seid-umschlungen-millionen/">
+<a class="efa__header__more-link" href="{% trans "/en/investigations/euros-doctors/articles/2016/12/15/embracing-millionsbe-embraced/" %}">
   {% trans "Read the article" %}
 </a>
