--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_article_link.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_article_link.html
@@ -1,5 +1,5 @@
 {% load i18n %}
 
-<a class="efa__header__more-link" href="/recherchen/euros-fuer-aerzte/artikel/2016/07/14/seid-umschlungen-millionen/">
+<a class="efa__header__more-link" href="{% trans "/en/investigations/euros-doctors/articles/2016/12/15/embracing-millionsbe-embraced/" %}">
   {% trans "Read article" %}
 </a>
