--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/index.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/index.html
@@ -5,25 +5,38 @@
 
 
 {% block content %}
-<h1>{% trans "Zero Euro Doctors" %}</h1>
 
 <div class="page__row">
-  <div class="page__section -narrow efa__content">
-    <h2>
-      {% blocktrans %}You want to publicly show that you are not taking any money from the pharma industry?{% endblocktrans %}
-    </h2>
+  <div class="page__section efa__content">
+    <h1>{% trans "Project “Zero Euro Doctors”" %}</h1>
 
     <p>
-      {% blocktrans %}
-        When users search for your name in our database, we can show them, that you are refusing to take money from pharma companies.
-      {% endblocktrans %}
+      Im Jahr 2016 haben die großen Pharmaunternehmen in Europa erstmals die Namen von Ärzten und Fachkreisangehörigen veröffentlicht, die Geld von Pharmafirmen erhalten hatten. Allerdings hatte nur ein Drittel der Ärzte der Veröffentlichung ihres Namens zugestimmt.
     </p>
 
     <p>
-      {% blocktrans %}
-        Please fill out the form below to get started.
-      {% endblocktrans %}
+      Das Problem: Keiner weiß, ob jene Ärzte, deren Namen nicht veröffentlicht wurde, tatsächlich keine geldwerten Leistungen erhalten – oder ob sie nur gegen die Veröffentlichung ihrer Daten waren.
     </p>
+
+    <p><strong>
+      Dieses Problem will das Recherchezentrum correctiv.org mit dem Projekt „Null-Euro-Ärzte“ lösen.
+    </strong></p>
+
+    <p>
+      Jetzt können Mediziner und Fachkreisangehörige selbst erklären, dass sie kein Geld von der Pharmaindustrie erhalten haben.
+    </p>
+
+    <p>
+      Alle Ärzte, die nichts zu verbergen haben, stehen künftig in der Datenbank — egal, ob sie Zuwendungen erhalten haben oder nicht. Nicht auftauchen in der Datenbank sollen nur noch jene Ärzte, die der Veröffentlichung ihrer Zuwendungen widersprechen haben.
+    </p>
+
+    <p>
+      Dies ist ein großer Schritt in Richtung Transparenz und setzt Ärzte, die keine Gelder angenommen haben, keinem falschen Verdacht mehr aus.
+    </p>
+
+    <p><strong>
+      Wenn Sie im vergangenen Jahr keine geldwerten Leistungen von der Pharmaindustrie erhalten haben, füllen Sie bitte das unten stehende Formular aus:
+    </strong></p>
 
     <div>
     {% crispy form %}
@@ -31,9 +44,6 @@
 
 
   </div>
-  <aside class="page__sidebar efa__content">
-
-  </aside>
 </div>
 
 
