Use get_absolute_url on recipient to build url

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/form.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/form.html
@@ -48,7 +48,7 @@
     {% endif %}
     {% if object.recipient %}
       <p>
-        <a href="{% url 'eurosfueraerzte-recipientdetail' slug=object.recipient.slug %}">
+        <a href="{{ object.recipient.get_absolute_url }}">
           {% trans "Your public profile page can be found here." %}
         </a>
       </p>
