Shorten German zerodocs intro text

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/index.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/index.html
@@ -8,10 +8,10 @@
 
 <div class="page__row">
   <div class="page__section efa__content">
-    <h1>{% trans "Project “Zero Euro Doctors”" %}</h1>
+    <h1>{% trans "“Zero Euro Doctors”" %}</h1>
 
     <p>
-      Im Jahr 2016 haben die großen Pharmaunternehmen in Europa erstmals die Namen von Ärzten und Fachkreisangehörigen veröffentlicht, die Geld von Pharmafirmen erhalten hatten. Allerdings hatte nur ein Drittel der Ärzte der Veröffentlichung ihres Namens zugestimmt.
+      Im Jahr 2016 haben die großen Pharmaunternehmen in Europa erstmals die Namen von Ärzten und Fachkreisangehörigen veröffentlicht, die Geld von Pharmafirmen erhalten hatten.
     </p>
 
     <p>
@@ -27,15 +27,11 @@
     </p>
 
     <p>
-      Alle Ärzte, die nichts zu verbergen haben, stehen künftig in der Datenbank — egal, ob sie Zuwendungen erhalten haben oder nicht. Nicht auftauchen in der Datenbank sollen nur noch jene Ärzte, die der Veröffentlichung ihrer Zuwendungen widersprechen haben.
-    </p>
-
-    <p>
       Dies ist ein großer Schritt in Richtung Transparenz und setzt Ärzte, die keine Gelder angenommen haben, keinem falschen Verdacht mehr aus.
     </p>
 
     <p><strong>
-      Wenn Sie im vergangenen Jahr keine geldwerten Leistungen von der Pharmaindustrie erhalten haben, füllen Sie bitte das unten stehende Formular aus:
+      Wenn Sie im vergangenen Jahr keine geldwerten Leistungen von Pharmafirmen erhalten haben, füllen Sie bitte das unten stehende Formular aus:
     </strong></p>
 
     <div>
