Add zerodoc submission to admin

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/form.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/form.html
@@ -19,7 +19,7 @@
     </p>
   {% else %}
     <p>
-      {% trans "You have not received money :" %}
+      {% trans "You gave the following statements:" %}
     </p>
     <ul>
     {% for submission in submissions %}
