--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/zerodocs/detail.html
@@ -1,6 +1,7 @@
 {% extends "correctiv_eurosfueraerzte/paymentrecipient_detail.html" %}
 
 {% load i18n %}
+{% load number_utils %}
 
 {% block header_sidebar_modifier %} -zerodoc{% endblock %}
 
@@ -10,28 +11,47 @@
 
 {% block header_sidebar_about %}
   <p>
-    Die Pharmaindustrie veröffentlicht seit 2016 die Honorare, die sie an einzelne Ärzte zahlt – wenn diese zuvor einer Veröffentlichung zustimmen. Das Problem: Ärzte, die überhaupt kein Geld annehmen, bleiben bei der Transparenzoffensive unsichtbar.
+    {% blocktrans %}Since 2016 the pharma industry publishes the fees paid to individual doctors – if they agreed to the publication. The problem: doctors who don't take any money are not visible in this transparency project.
+    {% endblocktrans %}
   </p>
   <p>
     <a class="efa__header__more-link" href="{% url "eurosfueraerzte:eurosfueraerzte-zerodocs_index" %}">
-      Zum Projekt Null-Euro-Ärzte
+      {% trans "To the Zero Euro Doctors Project" %}
     </a>
   </p>
 {% endblock %}
 
 {% block recipient_main %}
-  <p>
-    {{ object.get_full_name }} versichert, im Jahr XYZ kein Geld oder geldwerte Vorteile für Vorträge oder Fortbildungen von Pharmafirmen erhalten zu haben, die im Sinne des FSA-Transparenzkodexes hätten gemeldet werden müssen.
-  </p>
-  <p>
-    {{ object.get_full_name }} versichert, im Jahr XYZ kein Honorar für die Durchführung von Anwendungsbeobachtungen/NIS erhalten zu haben.
-  </p>
+  {% with efpia_years=zerodoc.get_confirmed_efpia_years %}
+    {% if efpia_years %}
+      <p>
+        {% blocktrans with name=zerodoc.get_full_name year_list=efpia_years|join_list count counter=efpia_years|length %}
+          {{ name }} has not received benefits from pharma companies under the EFPIA transparency codex in {{ year_list }}.
+        {% plural %}
+          {{ name }} has not received benefits from pharma companies under the EFPIA transparency codex in {{ year_list }}.
+        {% endblocktrans %}
+    </p>
+    {% endif %}
+  {% endwith %}
+  {% with observational_years=zerodoc.get_confirmed_observational_years %}
+    {% if observational_years %}
+      <p>
+        {% blocktrans with name=zerodoc.get_full_name year_list=observational_years|join_list count counter=observational_years|length %}
+          {{ name }} has not received fees for observational studies/NIS in {{ year_list }}.
+        {% plural %}
+          {{ name }} has not received fees for observational studies/NIS in {{ year_list }}.
+        {% endblocktrans %}
+    </p>
+    {% endif %}
+  {% endwith %}
 {% endblock %}
 
 {% block recipient_sidebar %}
 
 <p>
-  Die Offenlegung nach dem Transparenzkodex gilt nicht für Zahlungen, die Pharmaunternehmen für die Durchführung von klinischen Studien oder Anwendungs&shy;beobachtungen geleistet haben, da die Konzerne diese Zahlungen an Ärzte grundsätzlich verschweigen und die Unternehmen jeweils nur Gesamtsummen veröffentlichen.
+  {% blocktrans %}
+    The disclosure according to the transparency code does not apply to payments by pharma companies for clinical trials and observational studies. The pharma companies withhold the details of these payments to doctors and only publish aggregate sums.
+  {% endblocktrans %}
 </p>
 
   {% if payments %}
