Remove static placeholder block on zero euro doctors

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
@@ -20,7 +20,9 @@
   <div class="efa__content page__container">
   {% block content %}{% endblock %}
 
+  {% block placeholder_footer %}
   {% static_placeholder "eurosfueraerzte-footer" %}
+  {% endblock %}
   </div>
 
   {% block after_content %}{% endblock %}
