--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_index_blurb.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_index_blurb.html
@@ -1,5 +1,5 @@
 {% load i18n %}
 <p>
-  {% trans "In 2016 the 54 biggest pharma companies in Germany published their payments to doctors and other health care professionals and organisations from the last year." %}
+  {% trans "Only recently the biggest pharma companies in Germany started publishing payments of travel costs, registration and speaking fees to doctors and other health care professionals, given they agreed to the publication." %}
   <a href="{% trans "/en/investigations/euros-doctors/articles/2016/12/15/embracing-millionsbe-embraced/" %}">{% trans "Read the background article" %}</a>
 </p>
