Remove Ad placeholder from database homepage

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/index.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/index.html
@@ -66,6 +66,8 @@
 
 {% endblock %}
 
+{% block placeholder_footer %}{% endblock %}
+
 {% block after_content %}
 
   {% include "correctiv_eurosfueraerzte/_drug_search.html" %}
